# Velt

./: .gitignore  LICENSE  README.md  Taskfile.yaml  cliff.toml  commitlint.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  flatpak.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  FONTS.md  MARKDOWN.md  SECURITY.md  THEMES.md
flatpak/: cargo-sources.json  com.altagen.velt.desktop  com.altagen.velt.metainfo.xml  com.altagen.velt.yml  node-sources.json
src/: App.svelte  app.css  main.ts  markdown-plugins.d.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/: ConfirmDialog.svelte  Editor.svelte  FindReplacePanel.svelte  GoToLineDialog.svelte  MarkdownPreview.svelte  MarkdownToolbar.svelte  MenuBar.svelte  NoteEditor.svelte  NoteToolbar.svelte  PaneGroup.svelte  RecentFilesList.svelte  SettingsModal.svelte  SimpleConfirmDialog.svelte  StatusBar.svelte  TabBar.svelte
src/components/settings/: AboutSection.svelte  (+9 more)
src/lib/: autoSave.ts  fileOperations.ts  importedFonts.ts  markdownRenderer.ts  recentFiles.ts  systemFonts.ts  theme.ts  themeUtils.ts
src/stores/: appStore.ts  dialogStore.ts  findReplaceStore.ts  goToLineStore.ts  markdownPreviewStore.ts  noteModeStore.ts  paneStore.ts  reloadDialogStore.ts  settingsStore.ts  themeStore.ts
src/styles/: markdownPreview.css
src/types/: index.ts
(+2 files in other folders)
